--- a/index.html
+++ b/index.html
@@ -46,150 +46,148 @@
       </div>
     </div>
   </section>
-  <section>
+  <section class="following-section">
     <h4>Following</h4>
-    <div class="following-section">
-      <div class="following-container">
-        <div class="following-card">
-          <div class="following-image-outline has-story">
-            <div>
-              <img src="img/profile.jpg">
-            </div>
+    <div class="following-container">
+      <div class="following-card">
+        <div class="following-image-outline has-story">
+          <div>
+            <img src="img/profile.jpg">
           </div>
-          <span>
-            Name Here
-          </span>
         </div>
-        <div class="following-card">
-          <div class="following-image-outline has-story">
-            <div>
-              <img src="img/profile.jpg">
-            </div>
+        <span>
+          Name Here
+        </span>
+      </div>
+      <div class="following-card">
+        <div class="following-image-outline has-story">
+          <div>
+            <img src="img/profile.jpg">
           </div>
-          <span>
-            Name Here
-          </span>
         </div>
-        <div class="following-card">
-          <div class="following-image-outline has-story">
-            <div>
-              <img src="img/profile.jpg">
-            </div>
+        <span>
+          Name Here
+        </span>
+      </div>
+      <div class="following-card">
+        <div class="following-image-outline has-story">
+          <div>
+            <img src="img/profile.jpg">
           </div>
-          <span>
-            Name Here
-          </span>
         </div>
-        <div class="following-card">
-          <div class="following-image-outline has-story">
-            <div>
-              <img src="img/profile.jpg">
-            </div>
+        <span>
+          Name Here
+        </span>
+      </div>
+      <div class="following-card">
+        <div class="following-image-outline has-story">
+          <div>
+            <img src="img/profile.jpg">
           </div>
-          <span>
-            Name Here
-          </span>
         </div>
-        <div class="following-card">
-          <div class="following-image-outline no-story">
-            <div>
-              <img src="img/profile.jpg">
-            </div>
+        <span>
+          Name Here
+        </span>
+      </div>
+      <div class="following-card">
+        <div class="following-image-outline no-story">
+          <div>
+            <img src="img/profile.jpg">
           </div>
-          <span>
-            Name Here
-          </span>
         </div>
-        <div class="following-card">
-          <div class="following-image-outline no-story">
-            <div>
-              <img src="img/profile.jpg">
-            </div>
+        <span>
+          Name Here
+        </span>
+      </div>
+      <div class="following-card">
+        <div class="following-image-outline no-story">
+          <div>
+            <img src="img/profile.jpg">
           </div>
-          <span>
-            Name Here
-          </span>
         </div>
-        <div class="following-card">
-          <div class="following-image-outline no-story">
-            <div>
-              <img src="img/profile.jpg">
-            </div>
+        <span>
+          Name Here
+        </span>
+      </div>
+      <div class="following-card">
+        <div class="following-image-outline no-story">
+          <div>
+            <img src="img/profile.jpg">
           </div>
-          <span>
-            Name Here
-          </span>
         </div>
-        <div class="following-card">
-          <div class="following-image-outline no-story">
-            <div>
-              <img src="img/profile.jpg">
-            </div>
+        <span>
+          Name Here
+        </span>
+      </div>
+      <div class="following-card">
+        <div class="following-image-outline no-story">
+          <div>
+            <img src="img/profile.jpg">
           </div>
-          <span>
-            Name Here
-          </span>
         </div>
-        <div class="following-card">
-          <div class="following-image-outline no-story">
-            <div>
-              <img src="img/profile.jpg">
-            </div>
+        <span>
+          Name Here
+        </span>
+      </div>
+      <div class="following-card">
+        <div class="following-image-outline no-story">
+          <div>
+            <img src="img/profile.jpg">
           </div>
-          <span>
-            Name Here
-          </span>
         </div>
-        <div class="following-card">
-          <div class="following-image-outline no-story">
-            <div>
-              <img src="img/profile.jpg">
-            </div>
+        <span>
+          Name Here
+        </span>
+      </div>
+      <div class="following-card">
+        <div class="following-image-outline no-story">
+          <div>
+            <img src="img/profile.jpg">
           </div>
-          <span>
-            Name Here
-          </span>
         </div>
-        <div class="following-card">
-          <div class="following-image-outline no-story">
-            <div>
-              <img src="img/profile.jpg">
-            </div>
+        <span>
+          Name Here
+        </span>
+      </div>
+      <div class="following-card">
+        <div class="following-image-outline no-story">
+          <div>
+            <img src="img/profile.jpg">
           </div>
-          <span>
-            Name Here
-          </span>
         </div>
-        <div class="following-card">
-          <div class="following-image-outline no-story">
-            <div>
-              <img src="img/profile.jpg">
-            </div>
+        <span>
+          Name Here
+        </span>
+      </div>
+      <div class="following-card">
+        <div class="following-image-outline no-story">
+          <div>
+            <img src="img/profile.jpg">
           </div>
-          <span>
-            Name Here
-          </span>
         </div>
-        <div class="following-card">
-          <div class="following-image-outline no-story">
-            <div>
-              <img src="img/profile.jpg">
-            </div>
+        <span>
+          Name Here
+        </span>
+      </div>
+      <div class="following-card">
+        <div class="following-image-outline no-story">
+          <div>
+            <img src="img/profile.jpg">
           </div>
-          <span>
-            Name Here
-          </span>
         </div>
-        <div class="following-card">
-          <div class="following-image-outline no-story">
-            <div>
-              <img src="img/profile.jpg">
-            </div>
+        <span>
+          Name Here
+        </span>
+      </div>
+      <div class="following-card">
+        <div class="following-image-outline no-story">
+          <div>
+            <img src="img/profile.jpg">
           </div>
-          <span>
-            Name Here
-          </span>
         </div>
+        <span>
+          Name Here
+        </span>
       </div>
     </div>
   </section>
