scrolling body, no scrolling seems not to be working

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       </div>
     </div>
   </section>
-  <section class="following-section">
+  <section>
     <h4>Following</h4>
     <div class="following-container">
       <div class="following-card">
